--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "main.js",
 	"scripts": {
-		"css": "tailwindcss -i src/main.css -o build/my-obsidian-plugin/styles.css --watch",
-		"css:build": "NODE_ENV=production tailwindcss -i src/main.css -o build/my-obsidian-plugin/styles.css --minify",
+		"css": "tailwindcss -i src/main.css -o test-vault/.obsidian/plugins/my-obsidian-plugin/styles.css --watch",
+		"css:build": "tailwindcss -i src/main.css -o test-vault/.obsidian/plugins/my-obsidian-plugin/styles.css --minify",
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && npm run css:build && node scope.js",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
@@ -19,7 +19,7 @@
 		"@types/react-dom": "^18.2.7",
 		"autoprefixer": "^10.4.15",
 		"builtin-modules": "^3.3.0",
-		"electron": "^13.6.9",
+		"electron": "^29.1.6",
 		"esbuild": "0.19.2",
 		"esbuild-plugin-copy": "^2.1.1",
 		"obsidian": "latest",
